<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="by.bstu.fit.oleggutsev.lab6_7java.MainActivity" android:orientation="vertical">

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
        <RadioButton
                android:text="@string/Student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Student_radioButton"
                android:layout_weight="1"
                android:checked="true"
                android:layout_marginBottom="20dp"/>
        <RadioButton
                android:text="@string/Listener"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/Listener_radioButton" android:layout_weight="1"/>
    </RadioGroup>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:text="@string/Back"
                android:layout_width="wrap_content"
                android:onClick="Back_onClick"
                android:layout_height="wrap_content" android:id="@+id/buttonBack" android:layout_weight="1"
                style="@android:style/Widget.Button.Inset"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
        <Button
                android:text="@string/Next"
                android:onClick="Next_onClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Next_button" android:layout_weight="1"
                style="@android:style/Widget.Button.Inset"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:text="@string/PersonList"
                android:layout_width="wrap_content"
                android:onClick="PersonList_onClick"
                android:layout_height="wrap_content"
                android:id="@+id/buttonPerson"
                android:layout_weight="1"
                style="@android:style/Widget.Button.Inset"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
    </LinearLayout>
</LinearLayout>
