<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="10dp">

    <TextView
            android:text="@string/Faculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/Faculty_editText" tools:text="IT"/>
    <TextView
            android:text="@string/Speciality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/Speciality_editText" tools:text="POIBMS"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:text="@string/Back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Back_onClick"
                style="@android:style/Widget.Button.Inset"
                android:id="@+id/buttonBack" android:layout_weight="1"

                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
        <Button
                android:text="@string/Next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Next_onClick"
                style="@android:style/Widget.Button.Inset"
                android:id="@+id/Next_button" android:layout_weight="1"

                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
    </LinearLayout>
</LinearLayout>